--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -36,6 +36,11 @@ Tidy Vote FIle
 voter_or <- voter_all %>%
   select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY, CITY, BIRTH_DATE, STATUS, PARTY_CODE, RES_ADDRESS_1, PRECINCT_NAME, PRECINCT, ZIP_CODE) 
 ```
+Import Geographic dta 
+```{r}
+#file.choose()
+geo <- read_csv("/Users/rosa/Desktop/socialexplorer-zipcode.csv")
+voter_geo <- inner_join(voter_or, spatial) 
+by COUNTY
+```
 
-OK so how do I know who was registered through OMV? 
-How should I tidy the spatial file 
