--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -12,13 +12,25 @@ library(rms)      # Frank Harrell regression modeling strategies package
 library(Hmisc)    # Frank Harrell miscellaneous commands package
 library(broom)    # Create "tidy" data frames from statistical results
 library(popbio)   # Matrix population package, has beautiful logit+histogram plot command
+library(tidyverse)
+library(data.table)
+
 
 ```{r}
 ```
 Import and Bind 
 ```{r}
+voterfull <- read_tsv('https://www.dropbox.com/s/khywm89j8myn5t0/or_voter_history.zip?dl=0')
 
-#file.choose()
+file.choose()
+votern1 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD1_VoterHistory_Jan2017.txt")
+votern2 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD2_VoterHistory_Jan2017.txt")
+votern3 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD3_VoterHistory_Jan2017.txt")
+votern4 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD4_VoterHistory_Jan2017.txt")
+votern5 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD5_VoterHistory_Jan2017.txt")
+
+votern_all <- rbind(votern1, votern2, votern3, votern4, votern5)
+---------
 voter1 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD1_VoterList_Jan2017.txt")
 voter2 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD2_VoterList_Jan2017.txt")
 voter3 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD3_VoterList_Jan2017.txt")
@@ -33,8 +45,10 @@ spatial <- read_csv("/Users/rosa/Downloads/SPATIAL_INFO.csv")
 ```
 Tidy Vote FIle 
 ```{r}
-voter_or <- voter_all %>%
-  select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY, CITY, BIRTH_DATE, STATUS, PARTY_CODE, RES_ADDRESS_1, PRECINCT_NAME, PRECINCT, ZIP_CODE) 
+votern_or <- votern_all %>%
+  select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY, CITY, BIRTH_DATE, STATUS, PARTY_CODE, RES_ADDRESS_1, PRECINCT_NAME, PRECINCT, ZIP_CODE, 11/08/2016)
+         
+         11/08/2016) 
 ```
 Import Geographic dta 
 ```{r}
