--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -22,42 +22,40 @@ library(tidyr)
 Import and Bind Voter Data 
 ```{r}
 
-vote_particip <- read_csv("http://bit.ly/2kG37yJ")
+#vote_particip <- read_csv("http://bit.ly/2kG37yJ")
 vote_motor <- read_csv("http://bit.ly/2lCadlB")
 
 
-#These are the files with correct voting turnout data, however they are still missing registration type, I am not sure where to find that 
-
+#These are the files with correct voting turnout data, however they are still missing registration type, which I join from the data used in Home Work 1. 
 file.choose()
-voter21 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD1_VoterHistory_Jan2017.txt")
-voter22 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD2_VoterHistory_Jan2017.txt")
-voter23 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD3_VoterHistory_Jan2017.txt")
-voter24 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD4_VoterHistory_Jan2017.txt")
-voter25 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD5_VoterHistory_Jan2017.txt")
+voter1 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD1_VoterHistory_Jan2017.txt")
+voter2 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD2_VoterHistory_Jan2017.txt")
+voter3 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD3_VoterHistory_Jan2017.txt")
+voter4 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD4_VoterHistory_Jan2017.txt")
+voter5 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD5_VoterHistory_Jan2017.txt")
 
-voter2_all <- rbind(voter21, voter22, voter23, voter24, voter25)
+voter_all <- rbind(voter1, voter2, voter3, voter4, voter5)
 ---------
-#These are the voter files I downloaded from Pauls google drive, tho they do not seem to have all the information that I need. 
+#These are the voter files I downloaded from Pauls google drive, I am not currently using them. 
   
-voter31 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD1_VoterList_Jan2017.txt")
-voter32 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD2_VoterList_Jan2017.txt")
-voter33 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD3_VoterList_Jan2017.txt")
-voter34 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD4_VoterList_Jan2017.txt")
-voter35 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD5_VoterList_Jan2017.txt")
+#voter31 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD1_VoterList_Jan2017.txt")
+#voter32 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD2_VoterList_Jan2017.txt")
+#voter33 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD3_VoterList_Jan2017.txt")
+#voter34 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD4_VoterList_Jan2017.txt")
+#voter35 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD5_VoterList_Jan2017.txt")
 
-voter3_all <- rbind(voter1, voter2, voter3, voter4, voter5)
-head(voter_all) 
+#voter3_all <- rbind(voter1, voter2, voter3, voter4, voter5)
+ 
 
 ----
-voter_all <- inner_join(x = voter2_all,
-                           y = vote_motor,
-                           by = "VOTER_ID")
-voter_all <- left_join(voter2_all, vote_motor, by = "VOTER_ID")
+#voter_all <- inner_join(x = voter2_all,y = vote_motor, by = "VOTER_ID")
+
+voter2_all <- left_join(voter_all, vote_motor, by = "VOTER_ID")
 ```
 Tidy Vote File 
 ```{r}
 
-voter_or <- voter_all %>%
+voter_or <- voter2_all %>%
   select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY.x, CITY, BIRTH_DATE, STATUS, PARTY_CODE, PRECINCT_NAME, PRECINCT, ZIP_CODE, `11/08/2016`, DESCRIPTION, `11/06/2012`, `11/04/2008`)
 
 ```
@@ -65,13 +63,13 @@ Import Geographic Data
 ```{r}
 #I first import Census tract data, then State Legislative district, then County. I finally import Zip Code which I use for this project. However, while the others are from the 2015 community report, the Zip Code data comes from the 2010 election, so there is not perfect demographic information. 
 #file.choose()
-census <- read_csv("/Users/rosa/Desktop/SEcensus.csv")
+#census <- read_csv("/Users/rosa/Desktop/SEcensus.csv")
 
 #file.choose()
-stateleg <- read_csv("/Users/rosa/Desktop/SEstateleg.csv")
+#stateleg <- read_csv("/Users/rosa/Desktop/SEstateleg.csv")
 
 #file.choose()
-county <- read_csv("/Users/rosa/Desktop/SEcounty.csv")
+#county <- read_csv("/Users/rosa/Desktop/SEcounty.csv")
 
 #file.choose()
 zipcode <- read_csv("/Users/rosa/Desktop/zipcode.csv")
@@ -130,9 +128,17 @@ prop_voted16 <- voter_or %>%
 Proportion that are not Motor Voter Registered 
 ```{r}
 #this is not working, and also there must be a better way to do this? 
-prop_notMV <- voter_or %>%
-  group_by(ZIP_CODE) %>%
-  summarize(prop_MV = mean(`DESCRIPTION` == "NA"))
+votor_or2 <- votor_or %>%
+  mutate(DESCRIPTION = stringr::str_replace_all(DESCRIPTION, NA, "Not Registered")
+         
+   #  MV <- voter_or %>%
+ # group_by(ZIP_CODE) %>%
+  #summarize(prop_MV = mean(`DESCRIPTION` != "Not Registered"))
+  
+  
+      # prop_motorvoter <- voter_or %>%
+ # group_by(ZIP_CODE) %>%
+ # summarize(prop_NotMV = mean(`DESCRIPTION` == "Not Registered"))
 ```
 
 Put them together
@@ -164,6 +170,34 @@ race_reg2<- race_reg %>%
 
 sex_reg2 <- sex_reg %>% 
   gather(key="sex", value = "number", 3:4)
+```
+Math for Graphics 
+```{r}
+ both_reg3 <- both_reg %>% transform( prop_white = white / total_pop.x)
+#What I would have like to have is graphs comparing all voters, to voters registered through OMV, however I could not figure out the OMV pr
+
+ggplot(both_reg3, aes(x= prop_white, y = prop_voted.y)) +
+geom_jitter(aes(color = total_pop.y))+
+geom_smooth (method = "lm", se = FALSE,color = "darkorchid") 
+
+votor_orgraph <- voter_or %>%
+  group_by(ZIP_CODE) %>%
+  select (DESCRIPTION, ZIP_CODE)
+
+both_reg4 <- inner_join(x = votor_orgraph, y = both_reg3, 
+                      by = "ZIP_CODE")
+
+ggplot(both_reg4, aes(x= prop_white, y = prop_voted.y)) +
+geom_jitter(aes(color = total_pop.y))+
+geom_smooth (method = "lm", se = FALSE,color = "darkorchid") +
+  facet_wrap(~.DESCRIPTION)
+
+
+
+ggplot 
+
+3 types of bar plot (position = stack, dodge, fill) 
+
 ```
 
 
