--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -127,13 +127,23 @@ prop_voted16 <- voter_or %>%
 ```
 Proportion that are not Motor Voter Registered 
 ```{r}
-#this is not working, and also there must be a better way to do this? 
-votor_or2 <- votor_or %>%
-  mutate(DESCRIPTION = stringr::str_replace_all(DESCRIPTION, NA, "Not Registered")
+a <- (is.na(voter_or$DESCRIPTION))
+voter_or$DESCRIPTION[a] <- "conventional"
+voter_or$DESCRIPTION <- as.factor(voter_or$DESCRIPTION)
+
+table(voter_or$DESCRIPTION)
+
+prop_regcon <- voter_or %>%
+  group_by(ZIP_CODE) %>%
+  summarize(prop_reg = mean(DESCRIPTION == "conventional"))
+
+#Dont need this any more, also does not work. 
+#votor_or2 <- votor_or %>%
+#  mutate(DESCRIPTION = stringr::str_replace_all(DESCRIPTION, NA, "Not Registered")
          
-   #  MV <- voter_or %>%
- # group_by(ZIP_CODE) %>%
-  #summarize(prop_MV = mean(`DESCRIPTION` != "Not Registered"))
+#MV <- voter_or2 %>%
+  #group_by(ZIP_CODE) %>%
+  #summarize(prop_MV = mean(DESCRIPTION != "conventional"))
   
   
       # prop_motorvoter <- voter_or %>%
@@ -141,18 +151,23 @@ votor_or2 <- votor_or %>%
  # summarize(prop_NotMV = mean(`DESCRIPTION` == "Not Registered"))
 ```
 
-Put them together
+Construct data sets with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted
+
 ```{r}
 zipcode_data <- inner_join(x = total_regs,
                            y = prop_voted16,
                            by = "ZIP_CODE")
 
+zipcode_datafull <- inner_join(x = zipcode_data,
+                           y = prop_regcon,
+                           by = "ZIP_CODE")
+
 # Join sex with voter reg aggregated data
-sex_reg <- inner_join(x = sex, y = zipcode_data, 
+sex_reg <- inner_join(x = sex, y = zipcode_datafull, 
                       by = "ZIP_CODE")
 
 # Join race with voter reg aggregated data
-race_reg <- inner_join(x = race, y = zipcode_data, 
+race_reg <- inner_join(x = race, y = zipcode_datafull, 
                       by = "ZIP_CODE")
 # One set with both 
 
@@ -160,43 +175,24 @@ both_reg <- inner_join(x = race_reg, y = sex_reg,
                       by = "ZIP_CODE")
 
 both_reg2 <- both_reg %>% 
-  select(ZIP_CODE, total_pop.x, white, black, ai, asian, hawaiian, other, two, count.x, prop_voted.x, male, female)
+  select(ZIP_CODE, total_pop.x, white, black, ai, asian, hawaiian, other, two, count.x, prop_voted.x, male, female, prop_reg.x)
 
 ```
-Tiday Race and Sex 
+Tidy Files for Analysis  
 ```{r}
 race_reg2<- race_reg %>% 
   gather(key="race", value = "number", 3:9)
 
 sex_reg2 <- sex_reg %>% 
   gather(key="sex", value = "number", 3:4)
+
+both_regtidy <-inner_join(x = race_reg2, y = sex_reg2, 
+                      by = "ZIP_CODE") 
+#what varriables do I need, Should I change how the Race and Sex columns are organized?  
 ```
-Math for Graphics 
+Analysis 
 ```{r}
- both_reg3 <- both_reg %>% transform( prop_white = white / total_pop.x)
-#What I would have like to have is graphs comparing all voters, to voters registered through OMV, however I could not figure out the OMV pr
-
-ggplot(both_reg3, aes(x= prop_white, y = prop_voted.y)) +
-geom_jitter(aes(color = total_pop.y))+
-geom_smooth (method = "lm", se = FALSE,color = "darkorchid") 
-
-votor_orgraph <- voter_or %>%
-  group_by(ZIP_CODE) %>%
-  select (DESCRIPTION, ZIP_CODE)
-
-both_reg4 <- inner_join(x = votor_orgraph, y = both_reg3, 
-                      by = "ZIP_CODE")
-
-ggplot(both_reg4, aes(x= prop_white, y = prop_voted.y)) +
-geom_jitter(aes(color = total_pop.y))+
-geom_smooth (method = "lm", se = FALSE,color = "darkorchid") +
-  facet_wrap(~.DESCRIPTION)
-
-
-
-ggplot 
-
-3 types of bar plot (position = stack, dodge, fill) 
+#I would like to have a percent black, and a percent white ect columns. Then the analysis I can do is- correlation between regisration through MV and percentage white. Percent vote and race.
 
 ```
 
