--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -121,6 +121,7 @@ total_regs <- voter_or %>%
   group_by(ZIP_CODE) %>%
   summarize(count = n())
 ```
+Construct Variables for Analysis: 
 
 Proportion of registered that voted on Nov 2016 and Nov 2012 
 ```{r}
@@ -158,8 +159,7 @@ prop_regcon <- voter_or %>%
  # summarize(prop_NotMV = mean(`DESCRIPTION` == "Not Registered"))
 ```
 
-Construct data sets with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted
-
+Construct data sets for analysis with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted.
 ```{r}
 zipcode_data <- inner_join(x = total_regs,
                            y = prop_voted2016,
@@ -182,28 +182,100 @@ race_reg <- inner_join(x = race, y = zipcode_data,
                       by = "ZIP_CODE")
 # One set with both 
 
-county_reg <- inner_join(x = race_reg, y = sex, 
+zip_reg <- inner_join(x = race_reg, y = sex, 
                       by = "ZIP_CODE")
 
+# Add Turnout difference 
+require(dplyr)
+require(tidyr)
+mydata = tbl_df(mydata)
 
+zip_reg <- zip_reg %>%
+mutate (vote_diff = prop_v16 / prop_v12)
 ```
+Modeling: 
 
-Analysis 
+Model 1 and 2. Race and Registration
 ```{r}
- ggplot(county_reg, aes(x = p_black, y = prop_reg)) +
-geom_point()+
-  geom_smooth(method=`lm`) 
+# Modle 1 and 2: Race and Registration Type 
+ ggplot(zip_reg, aes(x = p_black, y = prop_reg)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "mediumpurple2") +
+    ggtitle("Registration Type by Zip Code Blackness") +
+  labs(x="Percet Black of Zip Code",y="Proportion of Voters Registered Traditionally")
+  
+ ggplot(zip_reg, aes(x = p_white, y = prop_reg)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "mediumpurple2") +
+    ggtitle("Registration Type by Zip Code Whiteness") +
+  labs(x="Percet White of Zip Code",y="Proportion of Voters Registered Traditionally")
+  
+m1 <- lm(p_white ~ propb_reg, data = zip_reg)
+summary(m1)
 
- ggplot(county_reg, aes(x = p_black, y = prop_reg)) +
-geom_point()+
-  geom_smooth(method=`lm`) 
-
- ggplot(county_reg, aes(x = prop_v16, y = prop_reg)) +
-geom_point()+
-  geom_smooth(method=`lm`) 
+m2 <- lm(p_black ~ prob_reg, data = zip_reg)
+summary(m2)
 
 #this suggests that the probability of being registered to vote not through OMV, is higher for counties with both higher black and white populations. This may be explained by the fact that there are such small percentages of black voters in oregon. 
 
+```
+Models Continued 
+```{r}
+# Model 3: Registration type and Voter turnout 
+ ggplot(zip_reg, aes(x = prop_reg, y = vote_diff)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "palegreen") +
+    ggtitle("Voting Increase and Registration Type across Zip Code") +
+  labs(x="Proportion of Voters Registered Traditionally",y="Increase in Turnout for 2016 Election")+
+   ylim(0, 3)
+
+m3 <-lm(vote_diff ~ prop_reg, data = zip_reg)
+summary(m3)
+#Why wont this model work? 
+
+# Model 4: Population and Registration Type 
+ ggplot(zip_reg, aes(x = total_pop.x, y = prop_reg)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "orange") +
+    ggtitle("AVR Prevalance across ZipCode Populaiton") +
+  labs(x="ZipCode Population ",y="Proportion of Voters Registered Traditionally")
+
+m4 <-lm(total_pop.x ~ prop_reg, data = zip_reg)
+summary(m4)
+
+
+# Model 5: population and turnout rate
+ggplot(zip_reg, aes(x = total_pop.x, y = vote_diff)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "yellowgreen") +
+    ggtitle("Turnout Rates by ZipCode Populaiton") +
+  labs(x="ZipCode Population ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
+   ylim(0, 2)
+
+m5 <-lm(total_pop.x ~ vote_diff, data = zip_reg)
+summary(m5)
+
+# Model 6 and 7: turnout by race 
+ggplot(zip_reg, aes(x = p_white, y = vote_diff)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "skyblue1") +
+    ggtitle("Turnout Rates by Zipcode Whitness") +
+  labs(x="ZipCode Whiteness ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
+   ylim(0, 2)
+
+ggplot(zip_reg, aes(x = p_black, y = vote_diff)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "skyblue1") +
+    ggtitle("Turnout Rates by Zipcode Blackness") +
+  labs(x="ZipCode Blackness ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
+   ylim(0, 2)
+
+m6 <- lm(vote_diff ~ p_white, data = zip_reg)
+summary(m6)
+
+
+m7 <- lm(vote_diff ~ p_black, data = zip_reg)
+summary(m7)
 
 ```
 Extra Code 
