--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -7,13 +7,7 @@ Load Packages
 ```{r}
 library(tidyverse)
 library(lubridate)
-library(car)      # John Fox program for his regression text, nice recode command
-library(rms)      # Frank Harrell regression modeling strategies package
-library(Hmisc)    # Frank Harrell miscellaneous commands package
-library(broom)    # Create "tidy" data frames from statistical results
-library(popbio)   # Matrix population package, has beautiful logit+histogram plot command
 library(tidyverse)
-library(data.table)
 library(stringr)
 library(tidyr)
 
@@ -27,7 +21,7 @@ vote_motor <- read_csv("http://bit.ly/2lCadlB")
 
 
 #These are the files with correct voting turnout data, however they are still missing registration type, which I join from the data used in Home Work 1. 
-file.choose()
+#file.choose()
 voter1 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD1_VoterHistory_Jan2017.txt")
 voter2 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD2_VoterHistory_Jan2017.txt")
 voter3 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD3_VoterHistory_Jan2017.txt")
@@ -48,14 +42,16 @@ voter_all <- rbind(voter1, voter2, voter3, voter4, voter5)
  
 
 ----
-#voter_all <- inner_join(x = voter2_all,y = vote_motor, by = "VOTER_ID")
+# Add Registration Type 
+  
+voter_all2 <- left_join(x = voter_all,y = vote_motor, by = "VOTER_ID")
 
-voter2_all <- left_join(voter_all, vote_motor, by = "VOTER_ID")
+
 ```
 Tidy Vote File 
 ```{r}
 
-voter_or <- voter2_all %>%
+voter_or <- voter_all2 %>%
   select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY.x, CITY, BIRTH_DATE, STATUS, PARTY_CODE, PRECINCT_NAME, PRECINCT, ZIP_CODE, `11/08/2016`, DESCRIPTION, `11/06/2012`, `11/04/2008`)
 
 ```
@@ -145,18 +141,9 @@ prop_regcon <- voter_or %>%
   group_by(ZIP_CODE) %>%
   summarize(prop_reg = mean(DESCRIPTION == "conventional"))
 
-#Dont need this any more, also does not work. 
-#votor_or2 <- votor_or %>%
-#  mutate(DESCRIPTION = stringr::str_replace_all(DESCRIPTION, NA, "Not Registered")
-         
-#MV <- voter_or2 %>%
-  #group_by(ZIP_CODE) %>%
-  #summarize(prop_MV = mean(DESCRIPTION != "conventional"))
-  
-  
-      # prop_motorvoter <- voter_or %>%
- # group_by(ZIP_CODE) %>%
- # summarize(prop_NotMV = mean(`DESCRIPTION` == "Not Registered"))
+prop_regOMV <- voter_or %>%
+  group_by(ZIP_CODE) %>%
+  summarize(prop_OMV = mean(DESCRIPTION != "conventional"))
 ```
 
 Construct data sets for analysis with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted.
@@ -170,7 +157,7 @@ zipcode_data <- inner_join(x = zipcode_data,
                            by = "ZIP_CODE")
 
 zipcode_data <- inner_join(x = zipcode_data,
-                           y = prop_regcon,
+                           y = prop_regOMV,
                            by = "ZIP_CODE")
 
 # Join sex with voter reg aggregated data
@@ -188,61 +175,120 @@ zip_reg <- inner_join(x = race_reg, y = sex,
 # Add Turnout difference 
 require(dplyr)
 require(tidyr)
-mydata = tbl_df(mydata)
 
 zip_reg <- zip_reg %>%
 mutate (vote_diff = prop_v16 / prop_v12)
+
 ```
+Filter Outliers and Zips under 50 people 
+```{r}
+
+zip_reg <- filter(zip_reg, total_pop.x > 50)
+zip_reg <- filter(zip_reg, p_white > .25)
+```
+
 Modeling: 
 
 Model 1 and 2. Race and Registration
 ```{r}
-# Modle 1 and 2: Race and Registration Type 
- ggplot(zip_reg, aes(x = p_black, y = prop_reg)) +
+# Model 1 and 2: Race and Registration Type 
+
+# Model 1, Blackness 
+ ggplot(zip_reg, aes(x = p_black, y = prop_OMV)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Blackness") +
-  labs(x="Percet Black of Zip Code",y="Proportion of Voters Registered Traditionally")
-  
- ggplot(zip_reg, aes(x = p_white, y = prop_reg)) +
+  labs(x="Percent Black of Zip Code",y="Proportion of Voters Registered Traditionally")
+
+m1 <- lm(p_black ~ prop_reg, data = zip_reg2)
+summary(m1)
+ 
+# Log Transformation 
+ggplot(zip_reg, aes(x = log(p_black +.005), y = prop_OMV)) +
+geom_point(color= "mediumpurple2")+
+  geom_smooth(method=`lm`, color= "hotpink") +
+    ggtitle("Registration Type by Zip Code Blackness") +
+  labs(x="Log Percet Black of Zip Code",y="Proportion of Voters Registered by OMV")
+
+#log both 
+ggplot(zip_reg, aes(x = log(p_black), y = log(prop_OMV))) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "mediumpurple2") +
+    ggtitle("Registration Type by Zip Code Blackness") +
+  labs(x="Log Percet Black of Zip Code",y="Log Proportion of Voters Registered Traditionally")
+
+#Alternative transformation
+
+ggplot(zip_reg, aes(x = p_black +I(p_black^2), y = prop_OMV)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "mediumpurple2") +
+    ggtitle("Registration Type by Zip Code Blackness") +
+  labs(x="Log Percet Black of Zip Code",y="Proportion of Voters Registered Traditionally")
+
+# Linear Model 
+
+m1b <- lm(log(p_black +.005) ~ prop_OMV, data = zip_reg)
+summary(m1b)
+# -3.22 with p value of .004 
+
+# Model 2  Whiteness 
+
+ ggplot(zip_reg, aes(x = p_white, y = prop_OMV)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Whiteness") +
   labs(x="Percet White of Zip Code",y="Proportion of Voters Registered Traditionally")
-  
-m1 <- lm(p_white ~ propb_reg, data = zip_reg)
-summary(m1)
 
-m2 <- lm(p_black ~ prob_reg, data = zip_reg)
+#transformation
+ggplot(zip_reg, aes(x = log(p_white), y = prop_OMV)) +
+geom_point(color= "mediumpurple2")+
+  geom_smooth(method=`lm`, color= "hotpink") +
+    ggtitle("Registration Type by Zip Code Whiteness") +
+  labs(x="Log Percent White of Zip Code",y="Proportion of Voters Registered by OMV")
+
+#alternative transformaiton 
+ggplot(zip_reg2, aes(x = p_white + I(p_white^2), y = prop_OMV +I(prop_reg^2))) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "mediumpurple2") +
+    ggtitle("Registration Type by Zip Code Whiteness") +
+  labs(x="Percet White of Zip Code",y="Proportion of Voters Registered Traditionally")
+
+ggplot(zip_reg2, aes(x = p_white, y = log(prop_reg))) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "mediumpurple2") +
+    ggtitle("Registration Type by Zip Code Whiteness") +
+  labs(x="Percet White of Zip Code",y="Log Proportion of Voters Registered Traditionally")
+
+m2 <- lm(log(p_white) ~ prop_OMV, data = zip_reg)
 summary(m2)
 
-#this suggests that the probability of being registered to vote not through OMV, is higher for counties with both higher black and white populations. This may be explained by the fact that there are such small percentages of black voters in oregon. 
+# -1.28 with P Value of  0.00 
 
 ```
 Models Continued 
 ```{r}
 # Model 3: Registration type and Voter turnout 
- ggplot(zip_reg, aes(x = prop_reg, y = vote_diff)) +
+ ggplot(zip_reg, aes(x = prop_OMV, y = vote_diff)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "palegreen") +
     ggtitle("Voting Increase and Registration Type across Zip Code") +
-  labs(x="Proportion of Voters Registered Traditionally",y="Increase in Turnout for 2016 Election")+
+  labs(x="Proportion of Voters Registered by OMV",y="Increase in Turnout for 2016 Election")+
    ylim(0, 3)
 
-m3 <-lm(vote_diff ~ prop_reg, data = zip_reg)
-summary(m3)
-#Why wont this model work? 
+#m3 <-lm vote_diff ~ prop_OMV, data = zip_reg)
+#summary(m3)
+
 
 # Model 4: Population and Registration Type 
- ggplot(zip_reg, aes(x = total_pop.x, y = prop_reg)) +
+ ggplot(zip_reg, aes(x = total_pop.x, y = prop_OMV)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "orange") +
     ggtitle("AVR Prevalance across ZipCode Populaiton") +
-  labs(x="ZipCode Population ",y="Proportion of Voters Registered Traditionally")
+  labs(x="ZipCode Population ",y="Proportion of Voters Registered Automatically")
 
-m4 <-lm(total_pop.x ~ prop_reg, data = zip_reg)
+m4 <-lm(total_pop.x ~ prop_OMV, data = zip_reg)
 summary(m4)
-
+# -52383 P value = .017 
 
 # Model 5: population and turnout rate
 ggplot(zip_reg, aes(x = total_pop.x, y = vote_diff)) +
@@ -252,22 +298,22 @@ geom_point(color= "hotpink")+
   labs(x="ZipCode Population ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
    ylim(0, 2)
 
-m5 <-lm(total_pop.x ~ vote_diff, data = zip_reg)
-summary(m5)
+#m5 <-lm(total_pop.x ~ vote_diff, data = zip_reg)
+#summary(m5)
 
 # Model 6 and 7: turnout by race 
-ggplot(zip_reg, aes(x = p_white, y = vote_diff)) +
+ggplot(zip_reg, aes(x = log(p_white), y = vote_diff)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "skyblue1") +
-    ggtitle("Turnout Rates by Zipcode Whitness") +
-  labs(x="ZipCode Whiteness ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
+    ggtitle("Turnout Rates by Zip code Whitness") +
+  labs(x=" Log of Zip Code Whiteness ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
    ylim(0, 2)
 
-ggplot(zip_reg, aes(x = p_black, y = vote_diff)) +
+ggplot(zip_reg, aes(x = log(p_black + .005), y = vote_diff)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "skyblue1") +
-    ggtitle("Turnout Rates by Zipcode Blackness") +
-  labs(x="ZipCode Blackness ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
+    ggtitle("Turnout Rates by Zip code Blackness") +
+  labs(x="Log of Zip Code Blackness ",y="Change in Turnout Rates from 2012 and 2016 Presidential Election")+
    ylim(0, 2)
 
 m6 <- lm(vote_diff ~ p_white, data = zip_reg)
@@ -278,6 +324,21 @@ m7 <- lm(vote_diff ~ p_black, data = zip_reg)
 summary(m7)
 
 ```
+More Plots 
+```{r}
+ggplot(zip_reg, aes(x = ZIP_CODE, y = p_white)) +
+geom_point(color= "hotpink") +
+    ggtitle("Whitness of Oregon Zip Codes") +
+  labs(x="Zip Code",y="Percent White")
+
+ ggplot(zip_reg, aes(x = total_pop.x, y = prop_OMV)) +
+geom_point(color= "hotpink")+
+  geom_smooth(method=`lm`, color= "palegreen") +
+    ggtitle("Registration Type across Zip Code Population") +
+  labs(x="Zip Code Population",y="Proportion of Voters Registered by OMV")
+
+```
+
 Extra Code 
 ```{r}
 #race_reg2<- race_reg %>% 
@@ -289,6 +350,18 @@ Extra Code
 #both_regtidy <-inner_join(x = race_reg2, y = sex_reg2, 
                     #  by = "ZIP_CODE") 
 
+#Dont need this any more, also does not work. 
+#votor_or2 <- votor_or %>%
+#  mutate(DESCRIPTION = stringr::str_replace_all(DESCRIPTION, NA, "Not Registered")
+         
+#MV <- voter_or2 %>%
+  #group_by(ZIP_CODE) %>%
+  #summarize(prop_MV = mean(DESCRIPTION != "conventional"))
+  
+  
+      # prop_motorvoter <- voter_or %>%
+ # group_by(ZIP_CODE) %>%
+ # summarize(prop_NotMV = mean(`DESCRIPTION` == "Not Registered"))
 
 ```
 
