Fixed chunks that weren't loading data

--- a/OMV_file1.Rmd
+++ b/OMV_file1.Rmd
@@ -1,20 +1,24 @@
+---
 title: "OMV file 1"
 author: "RosaKalish"
 output: github_document
-========================================================
+---
 
 Load Packages
-```{r}
+
+```{r warning=FALSE, message=FALSE}
 library(tidyverse)
 library(lubridate)
 library(tidyverse)
 library(stringr)
 library(tidyr)
-
-```{r}
+# Set chunk options
+knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
+
 Import and Bind Voter Data 
-```{r}
+
+```{r message=FALSE, warning=FALSE}
 
 #vote_particip <- read_csv("http://bit.ly/2kG37yJ")
 vote_motor <- read_csv("http://bit.ly/2lCadlB")
@@ -29,33 +33,26 @@ voter4 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD4_VoterHistory_Jan201
 voter5 <- read_tsv("/Users/rosa/Desktop/or_voter_history/CD5_VoterHistory_Jan2017.txt")
 
 voter_all <- rbind(voter1, voter2, voter3, voter4, voter5)
----------
-#These are the voter files I downloaded from Pauls google drive, I am not currently using them. 
-  
-#voter31 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD1_VoterList_Jan2017.txt")
-#voter32 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD2_VoterList_Jan2017.txt")
-#voter33 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD3_VoterList_Jan2017.txt")
-#voter34 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD4_VoterList_Jan2017.txt")
-#voter35 <- read_tsv("/Users/rosa/Documents/OMV project/data /CD5_VoterList_Jan2017.txt")
 
-#voter3_all <- rbind(voter1, voter2, voter3, voter4, voter5)
- 
 
-----
 # Add Registration Type 
   
 voter_all2 <- left_join(x = voter_all,y = vote_motor, by = "VOTER_ID")
 
 
 ```
+
 Tidy Vote File 
+
 ```{r}
 
 voter_or <- voter_all2 %>%
   select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY.x, CITY, BIRTH_DATE, STATUS, PARTY_CODE, PRECINCT_NAME, PRECINCT, ZIP_CODE, `11/08/2016`, DESCRIPTION, `11/06/2012`, `11/04/2008`)
 
 ```
+
 Import Geographic Data
+
 ```{r}
 #I first import Census tract data, then State Legislative district, then County. I finally import Zip Code which I use for this project. However, while the others are from the 2015 community report, the Zip Code data comes from the 2010 election, so there is not perfect demographic information. 
 #file.choose()
@@ -70,7 +67,9 @@ Import Geographic Data
 #file.choose()
 zipcode <- read_csv("/Users/rosa/Desktop/zipcode.csv")
 ```
+
 Tidy Geographic Data 
+
 ```{r}
 
 zipcode <- zipcode %>%
@@ -112,14 +111,17 @@ race <- zipcode %>%
 ```
 
 Get at zip code level for Oregon registered voters
+
 ```{r}
 total_regs <- voter_or %>%
   group_by(ZIP_CODE) %>%
   summarize(count = n())
 ```
+
 Construct Variables for Analysis: 
 
 Proportion of registered that voted on Nov 2016 and Nov 2012 
+
 ```{r}
 prop_voted2016 <- voter_or %>%
   group_by(ZIP_CODE) %>%
@@ -129,7 +131,9 @@ prop_voted2012 <- voter_or %>%
   group_by(ZIP_CODE) %>%
   summarize(prop_v12 = mean(`11/06/2012` == "YES"))
 ```
+
 Proportion that are not Motor Voter Registered 
+
 ```{r}
 a <- (is.na(voter_or$DESCRIPTION))
 voter_or$DESCRIPTION[a] <- "conventional"
@@ -147,6 +151,7 @@ prop_regOMV <- voter_or %>%
 ```
 
 Construct data sets for analysis with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted.
+
 ```{r}
 zipcode_data <- inner_join(x = total_regs,
                            y = prop_voted2016,
@@ -180,7 +185,9 @@ zip_reg <- zip_reg %>%
 mutate (vote_diff = prop_v16 / prop_v12)
 
 ```
+
 Filter Outliers and Zips under 50 people 
+
 ```{r}
 
 zip_reg <- filter(zip_reg, total_pop.x > 50)
@@ -190,6 +197,7 @@ zip_reg <- filter(zip_reg, p_white > .25)
 Modeling: 
 
 Model 1 and 2. Race and Registration
+
 ```{r}
 # Model 1 and 2: Race and Registration Type 
 
@@ -265,7 +273,9 @@ summary(m2)
 # -1.28 with P Value of  0.00 
 
 ```
+
 Models Continued 
+
 ```{r}
 # Model 3: Registration type and Voter turnout 
  ggplot(zip_reg, aes(x = prop_OMV, y = vote_diff)) +
@@ -324,7 +334,9 @@ m7 <- lm(vote_diff ~ p_black, data = zip_reg)
 summary(m7)
 
 ```
+
 More Plots 
+
 ```{r}
 ggplot(zip_reg, aes(x = ZIP_CODE, y = p_white)) +
 geom_point(color= "hotpink") +
@@ -364,4 +376,7 @@ Extra Code
  # summarize(prop_NotMV = mean(`DESCRIPTION` == "Not Registered"))
 
 ```
+
+
+
 
